--- a/Frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/Frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -6,12 +6,23 @@
                          <div *ngFor="let tempProduct of product" class="col-md-3">
                                 
                               <div class="product-box">
+
+                                    <a routerLink="/products/{{tempProduct.id}}">
                                     <img src="{{tempProduct.imageUrl}}" class="img-responsive">
+                                    </a>
+                                     
+                                    <a routerLink="/products/{{tempProduct.id}}">
                                     <h1>{{tempProduct.name}}</h1>
+                                    </a>
                                     <div class="product-price">{{tempProduct.unitPrice | currency:'INR'}}</div>
                                     <a href="#" class="btn btn-primary">Add To Cart</a>
                               </div>
                          </div>
+
+                         <!-- if products are empty display method -->
+                          <div *ngIf="product?.length==0" class="alert alert-warning col-md-12" role="alert">
+                              No Products Found.      
+                          </div>
                   </div>
             </div>
       </div>
