--- a/Frontend/angular-ecommerce/src/app/components/product-details/product-details.component.html
+++ b/Frontend/angular-ecommerce/src/app/components/product-details/product-details.component.html
@@ -4,7 +4,7 @@
            <img src="{{product.imageUrl}}" class="detail-img">
            <h3 >{{product.name}}</h3>
            <div class="price">{{ product.unitPrice | currency:'INR' }}</div>
-           <a href="#" class="primary-btn">Add To Cart</a>
+           <button (click)="addToCart(product)"  class="btn btn-primary btn-sm">Add To Cart</button>
 
            <hr>
            <h4>Description</h4>
