--- a/Frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/Frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -15,7 +15,7 @@
                                     <h1>{{tempProduct.name}}</h1>
                                     </a>
                                     <div class="product-price">{{tempProduct.unitPrice | currency:'INR'}}</div>
-                                    <a href="#" class="btn btn-primary">Add To Cart</a>
+                                    <button (click)="addToCart(tempProduct)" class ="btn btn-primary btn-sm">Add To Cart</button>
                               </div>
                          </div>
 
@@ -24,6 +24,38 @@
                               No Products Found.      
                           </div>
                   </div>
+
+                  <!-- begin footer -->
+                   <div class="footer-pagination">
+                        <div class="row">
+                              <div class="col-md-6"></div>
+                              <div class="col-md-6">
+                                    <div class="row">
+                                          <div class="col-md-9" style="padding-left: 30%">
+
+                                                 <ngb-pagination [(page)]="thePageNumber"
+                                                                  [pageSize]="thePageSize"
+                                                                  [collectionSize]="theTotalElements"
+                                                                  (pageChange)="listProducts()">
+
+                                                 </ngb-pagination>
+
+                                          </div>
+
+                                          <div class="col-md-3 mt-2" style="text-align: right;">
+                                                     <span class="mr-2">Page Size</span>
+
+                                                     <select #myPageSelect (change)="updatePageSize(myPageSelect.value)">
+                                                      <option selected="true">5</option>
+                                                      <option>10</option>
+                                                      <option>25</option>
+                                                     </select>
+                                          </div>
+                                    </div>
+                              </div>
+                        </div>
+                   </div>
+                   <!-- end footer -->
             </div>
       </div>
 </div>
