--- a/Frontend/angular-ecommerce/src/styles.css
+++ b/Frontend/angular-ecommerce/src/styles.css
@@ -942,7 +942,7 @@
           margin-right:15px
       }
           .main-content.page-m{
-          padding:10% 0!important
+          padding:10% 30% 10% 5%
       }
       .header-mobile .navbar-mobile{
           display:none;
