Okta login logout added , Saving order to database done

--- a/Frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/Frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -304,8 +304,7 @@
 
                                                 <div *ngIf="creditCardNameOnCard!.invalid && (creditCardNameOnCard!.dirty || creditCardNameOnCard!.touched)"
                                                 class="alert alert-danger mt-1">
-                                                <div
-                                                      *ngIf="creditCardNameOnCard!.errors?.['required'] || creditCardNameOnCard!.errors?.['notOnlyWhitespace']">
+                                                <div *ngIf="creditCardNameOnCard!.errors?.['required'] || creditCardNameOnCard!.errors?.['notOnlyWhitespace']">
                                                       Card Name is required</div>
                                               </div>
 
