--- a/Frontend/angular-ecommerce/src/app/app.component.html
+++ b/Frontend/angular-ecommerce/src/app/app.component.html
@@ -24,6 +24,8 @@
 
             <app-search></app-search>
 
+            <app-login-status></app-login-status>
+
              <app-cart-status></app-cart-status>
             
           </div>
@@ -34,8 +36,9 @@
     <!-- END HEADER DESKTOP-->
 
     <!-- MAIN CONTENT-->
-
+    
     <router-outlet></router-outlet>
+    
 
 
   </div>
